preview.css
:root {
	--header-primary: #fff;
	--header-secondary: #b9bbbe;
	--text-normal: #dcddde;
	--text-muted: #72767d;
	--text-link: #00b0f4;

	--channels-default: #8e9297;
	--interactive-normal: #b9bbbe;
	--interactive-hover: #dcddde;
	--interactive-active: #fff;
	--interactive-muted: #4f545c;

	--background-primary: #36393f;
	--background-secondary: #2f3136;
	--background-secondary-alt: #292b2f;
	--background-tertiary: #202225;
	--background-accent: #4f545c;
	--background-floating: #18191c;
	--background-mobile-primary: #36393f;
	--background-mobile-secondary: #2f3136;
	--background-modifier-hover: rgba(79,84,92,0.16);
	--background-modifier-active: rgba(79,84,92,0.24);
	--background-modifier-selected: rgba(79,84,92,0.32);
	--background-modifier-accent: hsla(0,0%,100%,0.06);
	--background-mentioned: rgba(250,166,26,0.05);
	--background-mentioned-hover: rgba(250,166,26,0.08);
	--background-message-hover: rgba(4,4,5,0.07);
	--background-help-warning: rgba(250,166,26,0.1);
	--background-help-info: rgba(0,176,244,0.1);

	--scrollbar-thin-thumb: #202225;
	--scrollbar-thin-track: transparent;
	--scrollbar-auto-thumb: #202225;
	--scrollbar-auto-track: #2e3338;
	--scrollbar-auto-scrollbar-color-thumb: #202225;
	--scrollbar-auto-scrollbar-color-track: #2f3136;

	--elevation-stroke: 0 0 0 1px rgba(4,4,5,0.15);
	--elevation-low: 0 1px 0 rgba(4,4,5,0.2),0 1.5px 0 rgba(6,6,7,0.05),0 2px 0 rgba(4,4,5,0.05);
	--elevation-medium: 0 4px 4px rgba(0,0,0,0.16);
	--elevation-high: 0 8px 16px rgba(0,0,0,0.24);

	--logo-primary: #fff;
	--focus-primary: #00b0f4;
	--radio-group-dot-foreground: #8ea1e1;
	--guild-header-text-shadow: 0 1px 1px rgba(0,0,0,0.4);
	--channeltextarea-background: #40444b;
	--activity-card-background: #202225;
	--textbox-markdown-syntax: #8e9297;

	--deprecated-card-bg: rgba(32,34,37,0.6);
	--deprecated-card-editable-bg: rgba(32,34,37,0.3);
	--deprecated-store-bg: #36393f;
	--deprecated-quickswitcher-input-background: #72767d;
	--deprecated-quickswitcher-input-placeholder: hsla(0,0%,100%,0.3);
	--deprecated-text-input-bg: rgba(0,0,0,0.1);
	--deprecated-text-input-border: rgba(0,0,0,0.3);
	--deprecated-text-input-border-hover: #040405;
	--deprecated-text-input-border-disabled: #202225;
	--deprecated-text-input-prefix: #dcddde;
}

div#preview {
	background-color: var(--background-tertiary);
	margin: 15px auto;
	width: 100%;
	max-width: 470px;
	height: 300px;
	border-radius: 10px;
	flex-shrink: 0;
	overflow: hidden;
	transition: background-color 100ms linear;
}
div#preview div {
	transition: background-color 100ms linear;
}
div#preview div#top {
	width: 100%;
	height: 4%;
}
div#preview div#big-container {
	width: 100%;
	height: 96%;
}
div#preview div#guild-container {
	width: 5%;
	height: 100%;
	float: left;
}
div#preview div#channel-container {
	position: relative;
	background-color: var(--background-secondary);
	width: 17.5%;
	height: 100%;
	float: left;
}
div#preview div#user-container {
	width: 100%;
	height: 8%;
	position: absolute;
	box-sizing: border-box;
	padding: 2px;
	bottom: 0;
	background-color: var(--background-secondary-alt);
}
div#preview div#main-container {
	width: 77.5%;
	height: 100%;
	float: left;
}
div#preview div#header-container {
	background-color: var(--background-primary);
	width: 100%;
	height: 8%;
}
div#preview div#chat-container {
	position: relative;
	background-color: var(--background-primary);
	box-sizing: border-box;
	width: 77.5%;
	height: 92%;
	float: left;
}
div#preview div#chat-container div#scrollbar-container {
	box-sizing: border-box;
	position: absolute;
	padding: 0 1.5px;
	width: 2%;
	height: 89%;
	right: 0;
}
div#preview div#chat-list-container {
	width: 98%;
	height: 89%;
}
div#preview div#chat-messages {
	box-sizing: border-box;
	float: left;
	width: 95.5%;
}
div#preview div#chat-input-container {
	width: 100%;
	height: 11%;
}
div#preview div#member-container {
	position: relative;
	float: left;
	background-color: var(--background-secondary);
	box-sizing: border-box;
	padding: 0px 6px;
	width: 22.5%;
	height: 100%;
}
div#preview div#scrollbar-container div#scrollbar {
	position: relative;
	background-color: var(--scrollbar-auto-track);
	height: 100%;
	width: 100%;
	border-radius: 5px;
}
div#preview div#scrollbar-container div#scrollbar-button {
	position: absolute;
	background-color: var(--scrollbar-auto-thumb);
	height: 30%;
	width: 100%;
	border-radius: 5px;
	bottom: 0;
}
div#preview div.thin-scrollbar {
	position: absolute;
	height: 100%;
	width: 3px;
	top: 0;
	right: 0;
	transition-property: background-color;
}
div#preview div.thin-scrollbar-button {
	position: absolute;
	margin: 0 25%;
	height: 30%;
	width: 50%;
	border-radius: 5px;
	top: 1px;
	transition-property: background-color;
}
div#preview div#member-container:hover div.thin-scrollbar {
	background-color: var(--scrollbar-thin-track);
}
div#preview div#member-container:hover div.thin-scrollbar-button {
	background-color: var(--scrollbar-thin-thumb);
}
div#preview div#channel-list-container:hover div.thin-scrollbar {
	background-color: var(--scrollbar-thin-track);
}
div#preview div#channel-list-container:hover div.thin-scrollbar-button {
	background-color: var(--scrollbar-thin-thumb);
}

div#preview div.text {
	display: inline;
	float: left;
	background-color: #bdf;
	height: 6px;
	border-radius: 3px;
}
div#preview div.text.tiny {
	width: 35px;
}
div#preview div.text.short {
	width: 47px;
}
div#preview div.text.medium {
	width: 100px;
}
div#preview div.text.long {
	width: 150px;
}
div#preview div.text.thin {
	height: 4px;
	border-radius: 2px;
}

div#preview div.icon-holder {
	display: inline;
	float: left;
	background-color: var(--interactive-normal);
	height: 9px;
	width: 9px;
	border-radius: 4.5px;
}
div#preview div.icon-holder:hover {
	background-color: var(--interactive-hover);
}
div#preview div.avatar {
	display: inline;
	float: left;
	background-color: #0006;
	width: 14px;
	height: 14px;
	border-radius: 7px;
}
div#preview div.guild-logo {
	margin: 0 auto 3px auto;
	box-sizing: border-box;
	padding: 6px;
	background-color: var(--background-primary);
	width: 18px;
	height: 18px;
	border-radius: 9px;
	transition: background-color 100ms linear, border-radius 150ms linear;
}
div#preview div.guild-logo#main {
	padding: 4px;
}
div#preview div.guild-logo div.guild-logo-text {
	background-color: var(--text-normal);
	width: 100%;
	height: 100%;
	border-radius: 3px;
}
div#preview div.guild-logo#main div.guild-logo-text {
	border-radius: 5px;
}
div#preview div.guild-logo:hover {
	background-color: #7289da;
	border-radius: 5px;
}
div#preview div.guild-logo:hover div.guild-logo-text {
	background-color: #fff;
}
div#preview div#guild-separator {
	background-color: var(--background-modifier-accent);
	margin: 0 auto 3px auto;
	height: 1px;
	width: 50%;
}

div#preview div.user {
	min-height: 14px;
	padding: 2px;
	border-radius: 2px;
}
div#preview div.user div.user-text div {
	margin: 1px 1px 1px 3px;
}
div#preview div.user div.user-text div.status {
	background-color: var(--channels-default);
}

div#preview div#user-container div.user {
	box-sizing: border-box;
	width: 42px;
	float: left;
}
div#preview div#user-container div.text {
	width: 20px;
}
div#preview div#user-container div.icon-holder {
	margin: 5px 1.5px;
}
div#preview div#user-container div#username {
	background-color: var(--header-primary);
}

div#preview div#chat-container div.message {
	margin: 5px 0;
	padding: 2px 6px;
	width: 100%;
	height: 14px;
}
div#preview div#chat-container div.message:hover {
	background-color: var(--background-message-hover);
}
div#preview div#chat-container div.message div.message-text {
	float: left;
	padding: 1px 6px;
}
div#preview div#chat-container div.message div.message-text div.time {
	margin: 1px 0 0 3px;
	background-color: var(--text-muted);
}
div#preview div#chat-container div.message div.chat {
	margin-top: 2px;
	background-color: var(--text-normal);
}
div#preview div#chat-container div#chat-input-container div#chat-input {
	box-sizing: border-box;
	height: 18px;
	margin: 1px 8px;
	padding: 5px 5px 5px 8px;
	background-color: var(--channeltextarea-background);
	border-radius: 3px;
}
div#preview div#chat-container div#chat-input-container div#right-icons {
	float: right;
}
div#preview div#chat-container div#chat-input-container div#right-icons div.icon-holder {
	margin-left: 4px;
}

div#preview div#header-icon-container {
	display: inline;
	float: right;
	margin: 0 4px;
}
div#preview div#header-icon-container > div.icon-holder {
	margin: 7px 2px;
}

div#preview div#message-search {
	display: inline;
	float: left;
	background-color: var(--background-tertiary);
	margin: 7px 2px;
	height: 9px;
	width: 48px;
	border-radius: 2px;
}

div#preview div#guild-name {
	background-color: var(--header-primary);
	display: block;
	float: none;
	width: 60px;
	margin: 8px;
}
div#preview div#channel-name {
	background-color: var(--header-primary);
	margin: 8px;
}
div#preview div#channel-description {
	background-color: var(--header-secondary);
	margin: 8px 0;
}

div#preview div#channel-list-container {
	position: relative;
	height: 84%;
}
div#preview ul#channel-list li {
	padding: 2px 4px;
	margin: 0 3px;
	min-height: 10px;
	border-radius: 2px;
	transition: background-color 100ms linear;
}
div#preview ul#channel-list li:hover {
	background-color: var(--background-modifier-hover);
}

div#preview ul#channel-list li.active {
	background-color: var(--background-modifier-active) !important;
}
div#preview ul#channel-list li div {
	margin: 2px 2px 0 0;
	background-color: var(--channels-default);
}
div#preview ul#channel-list li div.text {
	width: 54px;
}
div#preview ul#channel-list li.active div.text {
	background-color: var(--interactive-active) !important;
}
div#preview ul#channel-list li:hover div {
	background-color: var(--interactive-hover);
}
div#preview ul#channel-list li div.icon-holder {
	float: left;
	width: 6px;
	height: 6px;
	border-radius: 3px;
	background-color: var(--text-muted);
}
div#preview ul#channel-list li.muted div {
	background-color: var(--interactive-muted);
	transition-property: background-color, opacity;
}
div#preview ul#channel-list li.muted:hover div.text {
	background-color: var(--interactive-hover);
	opacity: 60%;
}

div#preview div#member-container div.role {
	float: none;
	display: block;
	margin: 10px 2px 2px 2px;
	background-color: var(--channels-default);
}
div#preview div#member-container div.user:hover {
	background-color: var(--background-modifier-hover);
}

